# libpath

./: CMakeLists.txt  README.md
include/: path.h
include/path/: posix.h  win.h
src/: path.c  shared.h
src/posix/: dirname.h  is-absolute.h  join.h  normalize.h
src/win/: dirname.h  is-absolute.h  join.h  normalize.h  shared.h
test/: CMakeLists.txt
test/posix/: dirname.c  join.c  normalize.c
test/win/: dirname.c  join.c  normalize.c
